--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -22,17 +22,32 @@
                     <ul class="navbar-nav me-auto">
 
                       <li class="nav-item">
-                        <a class="nav-link active" href="{{ path('homepage') }}">Accueil</a>
+                        <a class="nav-link active" href="{{ path('homepage')}}">Accueil</a>
+                      </li>
+                      
+{% if app.user %}
+
+                      <li class="nav-item">
+                        <a class="nav-link active" href="{{ path('app_logout') }}">Se déconnecter</a>
+                      </li>
+{% else %}
+  
+                      <li class="nav-item">
+                        <a class="nav-link active" href="{{ path('app_login') }}">Se connecter</a>
                       </li>
                       <li class="nav-item">
-                        <a class="nav-link active" href="{{ path('about') }}">A propos</a>
+                        <a class="nav-link active" href="{{ path('app_register') }}">S'inscrire</a>
                       </li>
+{% endif %}
+                      {% if app.user %}
                       <li class="nav-item">
                         <a class="nav-link active" href="{{ path('blog_list') }}">Liste des articles</a>
                       </li>
                       <li class="nav-item">
                         <a class="nav-link active" href="{{ path('blog_new') }}">Créer un article</a>
                       </li>
+                     
+                      {% if 'ROLE_ADMIN' in app.user.roles %}
                       <li class="nav-item">
                         <a class="nav-link active" href="{{ path('category_list') }}">Liste des catégories</a>
                       </li>
@@ -45,7 +60,8 @@
                       <li class="nav-item">
                         <a class="nav-link active" href="{{ path('tag_new') }}">Créer un badge</a>
                       </li>
-
+                      {% endif %}
+                {% endif %}
                     </ul>
                   </div>
                 </div>
