--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -6,8 +6,11 @@
     <h1>S'inscrire</h1>
 
     {{ form_start(registrationForm) }}
+        {{ form_row(registrationForm.name, { 'attr' :  {'class' : 'form-control' }, 'label' : 'Nom d\'utilisateur' }) }}
         {{ form_row(registrationForm.email, { 'attr' :  {'class' : 'form-control' }, 'label' : 'E-mail' }) }}
         {{ form_row(registrationForm.plainPassword, { 'attr' :  {'class' : 'form-control' }, 'label' : 'Mot de passe' }) }}
+        {{ form_row(registrationForm.bio, { 'attr' :  {'class' : 'form-control' }, 'label' : 'Biographie' }) }}
+        {{ form_row(registrationForm.avatar, { 'attr' :  {'class' : 'form-control' }, 'label' : 'Avatar' }) }}
         {{ form_row(registrationForm.agreeTerms, { 'attr' :  {'class' : 'form-check mb-3' }, 'label' : 'J\'accepte les CGU' }) }}
 
         <button type="submit" class="btn btn-lg btn-primary">Inscription</button>
